# Maze

./: .gitignore
src/: CMakeLists.txt  CMakePresets.json  Makefile
src/core/: CMakeLists.txt
src/core/Model/: CMakeLists.txt  Generator.cc  Generator.h  Reader.cc  Reader.h  matrix.txt  maze_model.cc  maze_model.h  searcher.cc  searcher.h  writer.cc  writer.h
src/core/controller/: CMakeLists.txt  controller.cc  controller.h
src/core/utils/: CMakeLists.txt  utils.cc  utils.h
src/data/: maze_25x25.txt  maze_3x3_not_ perfect.txt
src/maze/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  view.cc  view.h
src/tests/: CMakeLists.txt  tests.cc
